fix: x-axis page overflow

--- a/about.css
+++ b/about.css
@@ -27,5 +27,5 @@ section {
   justify-content: flex-start;
   min-height: 100vh;
   padding-bottom: 4rem;
-  width: 100vw;
+  width: 100%;
 }
